raffia/tests/error/scss/value/operators/minus-trailing-dot.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ minus-trailing-dot.scss:1:8
  │
1 │ a {b: -.}
  │        ^


